test/Fail/Issue779pattern.err
Issue779pattern.agda:7.7-12: error: [ShouldBeRecordPattern]
Expected record pattern
when checking that the expression λ (c) → c has type D → D
